# FsmInPureFP

./: FsmInPureFP.cabal  readme.md
app/: Main.hs
src/Fsm/: Commons.hs  ConstantLoaders.hs  Constants.hs  SimpleFsm.hs  Stages.hs  UpdateStates.hs  Utils.hs
src/Fsm/Commons/: Types.hs
src/Fsm/Constants/: Types.hs
src/Fsm/Stages/: Egg.hs  Types.hs
src/resources/: appl.cfg
test/: Test.hs
test/Fsm/: InputSpec.hs  SimpleFsmSpec.hs  StageUpdatesSpec.hs  TestUtils.hs
test/resources/: appl.cfg
