name:                FsmInPureFP
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/jinilover/FsmInPureFP#readme
license:             BSD3
license-file:        LICENSE
author:              Amy Wong
maintainer:          columbawong@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

-- data-files:          src/resources/appl.cfg

library
  hs-source-dirs:      src
  exposed-modules:     Fsm.Commons,
                       Fsm.Commons.Types,
                       Fsm.Utils,
                       Fsm.Stages.Egg,
                       Fsm.Stages,
                       Fsm.Stages.Types,
                       Fsm.SimpleFsm,
                       Fsm.ConstantLoaders,
                       Fsm.Constants.Types,
                       Fsm.UpdateStates
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time,
                       configurator,
                       old-locale

executable fsm-purefp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       FsmInPureFP,
                       time,
                      --  configurator,
                       containers
                      --  old-locale

test-suite FsmInPureFP-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Fsm.InputSpec
                     , Fsm.SimpleFsmSpec
                     , Fsm.StageUpdatesSpec
                     , Fsm.TestUtils
  build-depends:       base >= 4.7 && < 5,
                       FsmInPureFP,
                       time,
                       containers,
                       hspec
